--- a/6.md
+++ b/6.md
@@ -22,7 +22,7 @@ times.map(
 
 Part 2
 ```js
-const [time, distance] = document.body.textContent.trim().split('\n').map(line => line.match(/\d+/g).join()).map(Number);
+const [time, distance] = document.body.textContent.trim().split('\n').map(line => line.match(/\d+/g).join('')).map(Number);
 
 function getDistance(button, total) {
     return Math.max(0, button * (total - button));
@@ -33,4 +33,39 @@ function *getOptions(time) {
 }
 
 Array.from(getOptions(time)).filter(o => getDistance(o, t) > distance)).map(r => r.length)
+```
+
+
+Part 2, with math:
+
+The distance by button press duration is `button * (time - button)`, or `button * time - button^2` or `-button^2 + button * time`.  
+This looks like a quadratic parabola: `-x^2 + time*x + 0` (a = -1, b = time, c = 0).  
+Since we are looking for all x values where the parabola is "better than the record", we can offset the parabola with by the record distance and look for interesections with "0":
+
+```
+0 = -x^2 + time*x - distance
+```
+Or the standard notation
+```
+0 = x^2 - time*x + distance
+```
+Applying the quadratic formula:
+```
+x = (time ± sqrt(time^2 - 4(distance))) / 2
+or better:
+x = time / 2 ± sqrt(time^2 - 4(distance)) / 2
+```
+This would give us 2 results, pointing to the 2 points where the length of the button presses starts becoming better than the distance record, and where it stops being better, the apex being `time/2`. 
+
+Since we actually don't care about the exact points, but just the distance between them, we notice in the quadratic formula that there has to a "center point" (`time/2`) plus / minus how much the edges of the winning range deviate on each side (`sqrt(time^2 - 4(distance)) / 2`). The total length of the interval being the double: `interval length = sqrt(time^2 - 4(distance))`
+
+We're interested in a discrete amount, so we floor that result. In javascript:
+
+Part 2b:
+```js
+// read the data
+const [time, distance] = document.body.textContent.trim().split('\n').map(line => line.match(/\d+/g).join('')).map(Number);
+
+// calculate the result
+Math.floor(Math.sqrt(time**2 - 4*(distance)))
 ```
