--- a/6.md
+++ b/6.md
@@ -40,7 +40,7 @@ Part 2, with math:
 
 The distance by button press duration is `button * (time - button)`, or `button * time - button^2` or `-button^2 + button * time`.  
 This looks like a quadratic parabola: `-x^2 + time*x + 0` (a = -1, b = time, c = 0).  
-Since we are looking for all x values where the parabola is "better than the record", we can offset the parabola with by the record distance and look for interesections with "0":
+Since we are looking for all x values where the parabola is "better than the record", we can offset the parabola by the record distance and look for interesections with "0":
 
 ```
 0 = -x^2 + time*x - distance
