--- a/7.md
+++ b/7.md
@@ -36,7 +36,7 @@ function applyJokers(a) {
     const cardGroups = Object.groupBy(Array.from(a).map((c, i) => ({ c, i })), o => o.c);
     const cardEntries = Object.entries(cardGroups).map(([c, v]) => [c, v.length]).sort((a,b) => b[1] - a[1]);
     
-    // add joker to the group of cards that alrready is the largest.
+    // add jokers to the group of cards that already is the largest.
     // If there is no such group (it's all J), return original
     const largestGroup = cardEntries.find(([card]) => card !== 'J');    
     if(largestGroup) {
