--- a/8.md
+++ b/8.md
@@ -58,5 +58,8 @@ function getSteps(from) {
 
 const steps = pos.map(getSteps);
 
-console.log('Click here to get solution of part 2:', 'https://www.wolframalpha.com/input?i=' + encodeURIComponent(`least common multiple ${steps.join(', ')}`));
+console.log(
+    'Click here to get solution of part 2:',
+    'https://www.wolframalpha.com/input?i=' + encodeURIComponent(`least common multiple ${steps.join(', ')}`)
+);
 ```
