--- a/8.md
+++ b/8.md
@@ -58,8 +58,29 @@ function getSteps(from) {
 
 const steps = pos.map(getSteps);
 
+/// what I submitted:
 console.log(
     'Click here to get solution of part 2:',
     'https://www.wolframalpha.com/input?i=' + encodeURIComponent(`least common multiple ${steps.join(', ')}`)
 );
+
+/// after googling how to calculate LCM:
+function gcd(a, b) {
+    if(a < 0 || b < 0) {
+        return -1;
+    }
+    if(a === 0) {
+        return b;
+    }
+    if(b === 0) {
+        return a;
+    }
+    return gcd(b, a % b);
+}
+
+function lcm(a, b) {
+    return a / gcd(a,b) * b;
+}
+
+console.log('Part 2: ', steps.reduce(lcm))
 ```
